testsuite/tests/typecheck/should_fail/T10715b.stderr

T10715b.hs:7:7: error:
    • Couldn't match representation of type ‘b0’ with that of ‘[b0]’
        arising from a use of ‘coerce’
    • In the first argument of ‘asTypeOf’, namely ‘coerce’
      In the expression: coerce `asTypeOf` head
      In an equation for ‘foo’: foo = coerce `asTypeOf` head
    • Relevant bindings include
        foo :: [b0] -> b0 (bound at T10715b.hs:7:1)
